--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,8 @@
             "outputMode": "server",
             "ssr": {
               "entry": "src/server.ts"
-            }
+            },
+            "baseHref": "/consumirApiLuisR/"
           },
           "configurations": {
             "production": {
